--- a/Readme
+++ b/Readme
@@ -6,13 +6,11 @@ Tool installation
 3. Download install IntelliJ Community Edition https://www.jetbrains.com/idea/download
 4. Install Groovy from terminal:
   brew install groovy
-
 5. Install Gradle/Maven from terminal:
 
          For Gradle, use below command in terminal:
 
             brew install gradle
-
 6. Set JAVA_HOME and GRADLE_HOME and add it to PATH. In your .bash_profile file (usually located in the user’s home directory) add the following line to update PATH variable permanently.
 
           export JAVA_HOME=/usr/libexec/java_home
@@ -20,15 +18,13 @@ Tool installation
           export GRADLE_HOME=/usr/local/opt/gradle/libexec
 
           export PATH=$JAVA_HOME/bin:$GRADLE_HOME/bin:$PATH
-
-7. Save the file. Right now, it’s time to tell our environment to use changed .bash_profile by running the following command:
-
-      source .bash_profile
-    
+7. Save the file. Right now, it’s time to tell our environment to use changed .bash_profile by running the following command
+      source .bash_profile   
 8. Check JAVA_HOME, GRADLE_HOME and JAVA -version to verify if they are set properly. 
 
-To run on command prompt:
-1) go to secure directory
+<----------------------To run on command prompt---------------------->
+1) go to root directory "sports"
 2) Enter the following command and hit enter
 
-./gradlew tasks test
+  ./gradlew test
+<-------------------------------------------------------------------->
